overview: Shield widget bounds now correct after rotation.

Shield widget gets updated in PositionWindows, which has an early out if
no windows. Move update before early return.

Also fix a big with the no recents message not disappearing if an window
item is added back to the grid via split view.

Test: manual
Bug: 842395, 842394
Change-Id: I52dcdf9c012edc32c7d47bbdd978b6f59376a289
Reviewed-on: https://chromium-review.googlesource.com/1063171
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559545}
Former-commit-id: 2a92c1111bdaf14ac61c4d2cf6f6d3723449acf3