ash/wm/overview/window_selector.h
@@ -93,7 +93,6 @@ class ASH_EXPORT WindowSelector : public display::DisplayObserver,
   void WindowClosing(WindowSelectorItem* window);
 
   // Called to set bounds for window grids. Used for split view.
-  void SetBoundsForWindowGridsInScreen(const gfx::Rect& bounds);
   void SetBoundsForWindowGridsInScreenIgnoringWindow(
       const gfx::Rect& bounds,
       WindowSelectorItem* ignored_item);
